test/sema/negative/wrong_arg_num3.out
wrong_arg_num3.impala:2 col 4 - 13: error: too many arguments: 3 for 1
